# ECE6363_CacheSimulation

./: CacheSimulationReport.docx  benchmarks.sh  pyproject.toml  sim-bpred  sim-cache  sim-eio  sim-fast  sim-outorder  sim-profile  sim-safe
analysis/: analysis.py  benchmark.py
benchmarks/SPEC2000/spec2000args/eon/: RUNeon
benchmarks/SPEC2000/spec2000args/wupwise/: RUNwupwise
benchmarks/output/spec2000/results/: bzip2_QA_32K.txt  bzip2_QA_64K.txt  bzip2_QA_8K.txt  bzip2_QB_128K.txt  bzip2_QB_2K.txt  bzip2_QB_32K.txt  bzip2_QC_1way.txt  bzip2_QC_2way.txt  bzip2_QC_8way.txt  bzip2_QD_128K.txt  bzip2_QD_1M.txt  bzip2_QD_512K.txt  bzip2_QE_128B_Block.txt  bzip2_QE_256B_Block.txt  bzip2_QE_32B_Block.txt  bzip2_QE_64B_Block.txt  crafty_QA_32K.txt  crafty_QA_64K.txt  crafty_QA_8K.txt  crafty_QB_128K.txt  crafty_QB_2K.txt  crafty_QB_32K.txt  crafty_QC_1way.txt  crafty_QC_2way.txt  crafty_QC_8way.txt  crafty_QD_128K.txt  crafty_QD_1M.txt  crafty_QD_512K.txt  crafty_QE_128B_Block.txt  crafty_QE_256B_Block.txt  crafty_QE_32B_Block.txt  crafty_QE_64B_Block.txt  eon_QA_32K.txt  eon_QA_64K.txt  eon_QA_8K.txt  eon_QB_128K.txt  eon_QB_2K.txt  eon_QB_32K.txt  eon_QC_1way.txt  eon_QC_2way.txt  (+120 more)
tests-alpha/results/: anagram.eio-simout  anagram.simout  test-fmath.eio-simout  test-fmath.simout  test-llong.eio-simout  test-llong.simout  test-lswlr.eio-simout  test-lswlr.simout  test-math.eio-simout  test-math.simout  test-printf.eio-simout  test-printf.simout
