[tool.poetry]
name = "ece6363_cachesimulation_analysis"
version = "0.1.0"
description = ""
authors = ["Erich McMillan <erich.mcmillan@hp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
